--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -229,9 +229,9 @@ jobs:
     runs-on: ubuntu-22.04
     needs: [test-oss, test-latest-njs, test-unprivileged]
 
-    if: |
-      github.ref == 'refs/heads/master' ||
-      github.ref == 'refs/heads/main'
+    # if: |
+    #   github.ref == 'refs/heads/master' ||
+    #   github.ref == 'refs/heads/main'
     services:
       registry:
         image: registry:2
@@ -268,12 +268,6 @@ jobs:
         with:
           platforms: linux/amd64,linux/arm64
 
-      - name: Login to Docker Hub
-        uses: docker/login-action@v3
-        with:
-          username: ${{ secrets.DOCKER_HUB_USERNAME }}
-          password: ${{ secrets.DOCKER_HUB_ACCESS_TOKEN }}
-
       - name: Login to GitHub Container Registry
         uses: docker/login-action@v3
         with:
@@ -293,8 +287,6 @@ jobs:
           tags: |
             ghcr.io/${{ github.repository }}/nginx-oss-s3-gateway:latest-${{ steps.date.outputs.date }}
             ghcr.io/${{ github.repository }}/nginx-oss-s3-gateway:latest
-            nginxinc/nginx-s3-gateway:latest-${{ steps.date.outputs.date }}
-            nginxinc/nginx-s3-gateway:latest
 
       - name: Build and push image [latest-njs]
         uses: docker/build-push-action@v5
@@ -309,8 +301,6 @@ jobs:
           tags: |
             ghcr.io/${{ github.repository }}/nginx-oss-s3-gateway:latest-njs-oss-${{ steps.date.outputs.date }}
             ghcr.io/${{ github.repository }}/nginx-oss-s3-gateway:latest-njs-oss
-            nginxinc/nginx-s3-gateway:latest-njs-oss-${{ steps.date.outputs.date }}
-            nginxinc/nginx-s3-gateway:latest-njs-oss
 
       - name: Build and push image [unprivileged]
         uses: docker/build-push-action@v5
@@ -325,5 +315,3 @@ jobs:
           tags: |
             ghcr.io/${{ github.repository }}/nginx-oss-s3-gateway:unprivileged-oss-${{ steps.date.outputs.date }}
             ghcr.io/${{ github.repository }}/nginx-oss-s3-gateway:unprivileged-oss
-            nginxinc/nginx-s3-gateway:unprivileged-oss-${{ steps.date.outputs.date }}
-            nginxinc/nginx-s3-gateway:unprivileged-oss
