re-add rule to push only on the master or main branch

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -229,9 +229,9 @@ jobs:
     runs-on: ubuntu-22.04
     needs: [test-oss, test-latest-njs, test-unprivileged]
 
-    # if: |
-    #   github.ref == 'refs/heads/master' ||
-    #   github.ref == 'refs/heads/main'
+    if: |
+      github.ref == 'refs/heads/master' ||
+      github.ref == 'refs/heads/main'
     services:
       registry:
         image: registry:2
