--- a/test/docker-compose.yaml
+++ b/test/docker-compose.yaml
@@ -40,6 +40,7 @@ services:
 
   minio:
     image: quay.io/minio/minio:RELEASE.2023-06-09T07-32-12Z
+    hostname: bucket-1.minio
     ports:
       - "9090:9000/tcp"
     restart: "no"
