--- a/common/etc/nginx/templates/default.conf.template
+++ b/common/etc/nginx/templates/default.conf.template
@@ -22,7 +22,7 @@ map $uri_full_path $uri_path {
 # FINAL_S3_SERVER is set in the startup script
 # (either ./common/docker-entrypoint.sh or ./standalone_ubuntu_oss_install.sh)
 # based on the S3_STYLE configuration option.
-js_var $s3_host ${FINAL_S3_SERVER};
+js_var $s3_host ${S3_HOST_HEADER};
 
 js_var $indexIsEmpty true;
 js_var $forIndexPage true;
