--- a/plus/etc/nginx/templates/upstreams.conf.template
+++ b/plus/etc/nginx/templates/upstreams.conf.template
@@ -7,7 +7,5 @@ resolver ${DNS_RESOLVERS};
 upstream storage_urls {
     zone s3_backends 64k;
 
-    # Be sure to specify the port in the S3_SERVER and be sure that port
-    # corresponds to the https/http in the proxy_pass directive.
-    server ${FINAL_S3_SERVER} resolve;
+    server ${S3_UPSTREAM} resolve;
 }
